--- a/RR_PeerAssessment2.Rmd
+++ b/RR_PeerAssessment2.Rmd
@@ -93,11 +93,11 @@ udf.str2time <- function(x) {
 
 # 'udf.expont' user-defined function for converting number scale character to proper scientific notation.
 udf.expont <- function(x, y) {
-        ifelse(x %in% c("1","2","3","4","5","6","7","8","9"), x <- paste0("e+0",x),
-               ifelse(x == "H", x <- "e+02",
-                      ifelse(x == "K", x <- "e+03",
-                             ifelse(x == "M", x <- "e+06",
-                                    ifelse(x == "B", x <- "e+09", x <- "e+0")))))
+        x <- ifelse(x %in% c("1","2","3","4","5","6","7","8","9"), paste0("e+0",x),
+                    ifelse(x == "H", "e+02",
+                           ifelse(x == "K", "e+03",
+                                  ifelse(x == "M", "e+06",
+                                         ifelse(x == "B", "e+09", "e+0")))))
         as.numeric(paste0(as.character(y),x))
 }
 
@@ -110,7 +110,8 @@ i <- sample.int(502, 256)
 i <- sample(i, 66)
 mypal <- colors(TRUE)[i]
 
-par.def <- par(no.readonly = TRUE) # snapshot of default graphic parameters.
+# snapshot of default graphic parameters.
+par.def <- par(no.readonly = TRUE) 
 ```
 &nbsp;
 
@@ -188,7 +189,7 @@ str(get(filenam[1]))
 
 <!-- For this data analysis work, we shall create a working data set called **stormdata** consisting 18 data columns grabbed from the *raw* data set **`r filenam[1]`**. (see attached list) -->
 
-```{r data.proc, cache=TRUE, echo=TRUE}
+```{r data.proc, cache=FALSE, echo=TRUE, results="hide"}
 # column number of the selected variable
 v <- c(1,2,3,4,5,6,7,8,12,13,19,20,21,22,23,24,25,26,27,28,32,33,34,35,37)
 names(get(filenam[1]))[v]
@@ -350,7 +351,7 @@ layout(matrix(c(1,2,
                 3,3,
                 4,4), nrow = 3, byrow = TRUE))
 
-par(las = 1, cex.axis = 0.65, ann = FALSE)
+par(las = 1, cex.axis = 0.80, cex.lab = 0.80, ann = FALSE)
 
 # weather events aggregate frequency by class across the USA.
 evcnt <- stormsub %>%
@@ -361,8 +362,8 @@ evcnt <- stormsub %>%
 # plotting barchart for weather events aggregate by class across the USA.
 par(mai = c(0.50,1.15,0.50,0.15))
 barplot(evcnt$n, horiz = TRUE, border = NA, col = pal, names.arg = unique(evcnt$EVCLASS))
-mtext("Weather Event Aggregate Frequency Across USA (1950 ~ 2011)", font = 2, side = 3, line = -1.25, adj = 1, cex = 0.70)
-mtext("(US Affiliated Territories Not Included)", side = 3, line = -2.00, adj = 1, cex = 0.65)
+mtext("Weather Event Frequency Aggregate Across USA (1950 ~ 2011)", font = 2, side = 3, line = 0.25, adj = 1, cex = 0.70)
+mtext("(US Affiliated Territories Not Included)", side = 3, line = -0.75, adj = 1, cex = 0.65)
 maxtik <- max(axTicks(1))
 m <- barplot(evcnt$n, horiz = TRUE, plot = FALSE)
 for (i in 1:length(m)) {
@@ -380,9 +381,9 @@ evcnt <- stormsub %>%
 # plotting barchart for aggregate frequency of weather events manifested in casualty and economic loss by class across the USA.
 par(mai = c(0.50,0.15,0.50,1.15), yaxt = "n")
 barplot(evcnt$n, horiz = TRUE, border = NA, col = pal, names.arg = unique(evcnt$EVCLASS))
-mtext("Weather Event Aggregate Frequency Across USA (1950 ~ 2011)", font = 2, side = 3, line = -1.25, adj = 1, cex = 0.70)
-mtext("Manifested in Casualty & Economic Loss", font = 2, side = 3, line = -2.00, adj = 1, cex = 0.70)
-mtext("(US Affiliated Territories Not Included)", side = 3, line = -2.75, adj = 1, cex = 0.65)
+mtext("Weather Event Frequency Aggregate Across USA (1950 ~ 2011)", font = 2, side = 3, line = 0.25, adj = 1, cex = 0.70)
+mtext("Manifested in Casualty & Property/Crop Loss", font = 2, side = 3, line = -0.75, adj = 1, cex = 0.70)
+mtext("(US Affiliated Territories Not Included)", side = 3, line = -1.75, adj = 1, cex = 0.65)
 maxtik <- max(axTicks(1))
 m <- barplot(evcnt$n, horiz = TRUE, plot = FALSE)
 for (i in 1:length(m)) {
@@ -404,8 +405,8 @@ barplot(n ~ EVCLASS + as.character(STATE), data = evcnt,
         horiz = FALSE, 
         border = NA,
         col = pal)
-title(ylab = "Aggregate Frequency by Event Type")
-mtext("Weather Events of Individual-State (1950 ~ 2011)", font = 2, side = 3, line = -1.25, adj = 0, padj = 0, cex = 0.70)
+title(ylab = "Event Frequency by Type", cex.lab = 1.00)
+mtext("Weather Events Frequency Aggregate of Individual-State (1950 ~ 2011)", font = 2, side = 3, line = 0.25, adj = 0, padj = 0, cex = 0.70)
 
 # aggregate weather events of individual state manifested in casualty and economic loss.
 evcnt <- stormsub %>%
@@ -420,9 +421,9 @@ barplot(n ~ EVCLASS + as.character(STATE), data = evcnt,
         horiz = FALSE, 
         border = NA,
         col = pal)
-title(ylab = "Aggregate Frequency by Event Type")
-mtext("Weather Events of Individual-State (1950 ~ 2011)", font = 2, side = 3, line = -1.25, adj = 0, padj = 0, cex = 0.70)
-mtext("Manifested in Casualty & Economic Loss", font = 2, side = 3, line = -2.00, adj = 0, padj = 0, cex = 0.70)
+title(ylab = "Event Frequency by Type", cex.lab = 1.00)
+mtext("Weather Events Frequency Aggregate of Individual-State (1950 ~ 2011)", font = 2, side = 3, line = 0.25, adj = 0, padj = 0, cex = 0.70)
+mtext("Manifested in Casualty & Property/Crop Loss", font = 2, side = 3, line = -0.75, adj = 0, padj = 0, cex = 0.70)
 
 par(par.def)
 rm(j, m, maxtik, par.def, evcnt)
