--- a/RR_PeerAssessment2.Rmd
+++ b/RR_PeerAssessment2.Rmd
@@ -28,7 +28,7 @@ source(getRflib("strCap.R"),local = TRUE)
 if (!requireNamespace("data.table", quietly = TRUE)) {
         install.packages("data.table")
 }
-library(data.table)
+# library(data.table)
 # if (!requireNamespace("dtplyr", quietly = TRUE)) {
 #         install.packages("dtplyr")
 # }
@@ -391,7 +391,7 @@ for (i in 1:length(m)) {
         text(evcnt$n[i], m[i], labels = formatC(evcnt$n[i], big.mark = ","), pos = 4,  offset = j, cex = 0.70)
 }
 
-par(cex.axis = 0.70, cex.lab = 0.80, ann = FALSE, yaxt = "s")
+par(cex.axis = 0.75, cex.lab = 0.80, ann = FALSE, yaxt = "s")
 
 # weather events aggregate frequency of individual state.
 evcnt <- stormsub %>%
@@ -431,9 +431,40 @@ rm(j, m, maxtik, par.def, evcnt)
 
 <!-- most hazardous weather events in terms of casualty and economic loss -->
 ```{r data.analytic2}
-select(STATE, EVCLASS, EVTYPE, FATALITIES, INJURIES, PROPDMG, CROPDMG) %>%
-               
+# casualty & property/crop loss breakdown by weather event of individual-state 
 
+evcnt <- stormsub %>% 
+        
+        select(STATE, EVCLASS, EVTYPE, FATALITIES, INJURIES, 
+               PROPDMG, PROPDMGEXP, CROPDMG, CROPDMGEXP) %>%
+        group_by(STATE, EVCLASS) %>%
+        summarise(FATALCNT = sum(FATALITIES),
+                  INJURCNT = sum(INJURIES),
+                  PROPDMGS = sum(mapply(udf.expont, PROPDMGEXP, PROPDMG)),
+                  CROPDMGS = sum(mapply(udf.expont, CROPDMGEXP, CROPDMG)))
+
+layout(matrix(c(1,2), nrow = 2))
+par(cex.axis = 0.65, cex.lab = 70, ann = FALSE)
+
+par(mai = c(0.50, 1.15, 0.50, 1.15))
+barplot((FATALCNT + INJURCNT) ~ EVCLASS + as.character(STATE), data = evcnt, 
+        horiz = FALSE, 
+        border = NA,
+        col = pal,
+        beside = FALSE)
+title(ylab = "Casualty Count")
+mtext("Casualty by Event Type of Individual-State (1950 ~ 2011)", font = 2, side = 3, line = -0.25, adj = 0, padj = 0, cex = 0.75)
+
+par(mai = c(0.50, 1.15, 0.50, 1.15))
+barplot((PROPDMGS + CROPDMGS) ~ EVCLASS + STATE, data = evcnt, 
+        horiz = FALSE, 
+        border = NA,
+        col = pal,
+        beside = FALSE)
+title(ylab = "Property/Crop Loss US$")
+mtext("Property/Crop Loss by Event Type of Individual-State (1950 ~ 2011)", font = 2, side = 3, line = -0.25, adj = 1, padj = 0, cex = 0.75)
+
+par(par.def)
 
 
 ```
